--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>4D-ND-geometry Privacy Policy</title>
+    <title>Clifford Torus Privacy Policy</title>
 </head>
 <body>
-    <h1>4D-ND-geometry Privacy Policy</h1>
+    <h1>Clifford Torus Privacy Policy</h1>
     <p>
         This application does not collect personal data from users</p>
-
 </body>
 </html>
